# hs-collectd

./: .gitignore  Makefile  collectd.cabal
Data/Collectd/: Binary.hs  Parsers.hs  PlainText.hs  Plugin.hs  Types.hs
