name:                collectd
version:             0.0.0
synopsis:            collectd Text + Binary Protocols
homepage:            https://github.com/kim/hs-collectd
license:             MPL-2.0
license-file:        LICENSE
author:              Kim Altintop <kim.altintop@gmail.com>
                   , Toralf Wittner <tw@dtex.org>
maintainer:          Kim Altintop <kim.altintop@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
        Data.Collectd.Binary
      , Data.Collectd.Parsers
      , Data.Collectd.PlainText
      , Data.Collectd.Plugin
      , Data.Collectd.Types

  build-depends:
        attoparsec
      , base        ==4.*
      , bytestring
      , cereal
      , mtl
      , network
      , text
      , time

  ghc-options:
      -Wall
      -fwarn-tabs
      -funbox-strict-fields

  default-language:  Haskell2010
